<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_plugin</name>
  <version>0.0.0</version>
  <description>This repository demonstrate custom rqt plugin on ROS2.</description>
  <maintainer email="jianle001@e.ntu.edu.sg">Bruce Chan Jian Le</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>class_loader</depend>
  <depend version_gte="1.11.2">pluginlib</depend>

  
  <build_depend>std_msgs</build_depend>
  <build_depend>rqt_gui_cpp</build_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>qt_gui_cpp</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>private_interface</build_depend>
  <build_depend>my_interface</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>rviz_common</build_depend>
  <build_depend>rviz_default_plugins</build_depend>
  <build_depend>rviz_ogre_vendor</build_depend>
  <build_depend>rviz_rendering</build_depend>
  <build_depend>rviz2</build_depend>

  <build_depend>eigen</build_depend>
  <build_depend>rosmsg2pbmsg</build_depend>




 
  
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rqt_gui_cpp</exec_depend>
  <exec_depend>qtbase5-dev</exec_depend>
  <exec_depend>qt_gui_cpp</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>rviz_common</exec_depend>
  <exec_depend>rviz_default_plugins</exec_depend>
  <exec_depend>rviz_ogre_vendor</exec_depend>
  <exec_depend>rviz_rendering</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>eigen</exec_depend>
  <exec_depend>rosmsg2pbmsg</exec_depend>




  <depend>sensor_msgs</depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
