<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>qt_plugin</name>
  <version>0.0.2</version>
  <description>Examples of minimal IoT publisher</description>
  <maintainer email="steve@prismtech.com">Steve Osselton</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>rosmsg2pbmsg</build_depend>
  <build_depend>tf2</build_depend>
  
  <exec_depend>tf2</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>rosmsg2pbmsg</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>